@startuml mobileorder
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho
left to right direction

entity "users" as users {
  user_id
  --
  email
  role
  created_at
  updated_at
}

entity "orders" as orders {
  order_id
  --
  user_id<<FK>>
  shop_id <<FK>>
  order_date
  total_amount
  guest_order_token
  status
  created_at
  updated_at
}

entity "order_item" as order_item {
  order_item_id
  --
  order_id<<FK>>
  item_id<<FK>>
  quantity
  price_at_order
  created_at
  updated_at
}

entity "items" as items {
  item_id
  --
  item_name
  description
  price
  is_available
  created_at
  updated_at
}

entity "shop_item" as shop_item {
  shop_item_id
  --
  item_id<<FK>>
  shop_id<<FK>>
  created_at
  updated_at
}

entity "shops" as shops {
  shop_id
  --
  name
  description
  location
  is_open
  created_at
  updated_at
}

entity "shop_staff" as shop_staff {
  shop_staff_id
  --
  shop_id<<FK>>
  user_id<<FK>>
  created_at
  updated_at
}

users ||--|| shop_staff
users |o--o{ orders
orders ||--|{ order_item
items ||--o{ order_item
items ||--o{ shop_item
shops ||--o{ shop_item
shops ||--o{ orders
shops ||--|{ shop_staff

@enduml
